--- a/TerminalHacking/TerminalHacking.vcxproj
+++ b/TerminalHacking/TerminalHacking.vcxproj
@@ -144,6 +144,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="TerminalHackingUtils.h" />
     <ClInclude Include="WordList.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
