--- a/TerminalHacking/TerminalHacking.vcxproj
+++ b/TerminalHacking/TerminalHacking.vcxproj
@@ -140,6 +140,7 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="stdafx.cpp" />
+    <ClCompile Include="TerminalHackingGame.cpp" />
     <ClCompile Include="WordList.cpp" />
   </ItemGroup>
   <ItemGroup>
